# docs/swagger.json
@@ -10,6 +10,43 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
+        "/login": {
+            "post": {
+                "description": "Login to an account with username and password",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "accounts"
+                ],
+                "summary": "Login to an account",
+                "parameters": [
+                    {
+                        "description": "username and password",
+                        "name": "account",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/args.AccountLoginArgs"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Login success, return account information"
+                    },
+                    "400": {
+                        "description": "Username or password is missing"
+                    },
+                    "401": {
+                        "description": "Username or password is incorrect"
+                    }
+                }
+            }
+        },
         "/register": {
             "post": {
                 "description": "Register a new account with username and password",
@@ -46,14 +83,29 @@
         }
     },
     "definitions": {
+        "args.AccountLoginArgs": {
+            "type": "object",
+            "properties": {
+                "password": {
+                    "type": "string",
+                    "example": "123456"
+                },
+                "username": {
+                    "type": "string",
+                    "example": "bob"
+                }
+            }
+        },
         "args.AccountRegisterArgs": {
             "type": "object",
             "properties": {
                 "password": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "123456"
                 },
                 "username": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "bob"
                 }
             }
         }
